# wyroam

./: Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: cli.rs  db.rs  graphql.rs  main.rs  node.rs  parser.rs  router.rs
frontend/: .gitignore  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/.next/: build-manifest.json  fallback-build-manifest.json  trace
frontend/.next/cache/: .rscinfo
frontend/.next/server/: middleware-build-manifest.js  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json
frontend/.next/server/pages/: Node.js  Zettlekatsen.js  _app.js  _document.js  _error.js  index.js
frontend/.next/static/chunks/: 124e8_next_b14316._.js  124e8_next_b14316._.js.map  124e8_next_dist_11c66d._.js  124e8_next_dist_11c66d._.js.map  7e64a_react-dom_f9af3e._.js  7e64a_react-dom_f9af3e._.js.map  86733_framer-motion_dist_es_064dbe._.js  86733_framer-motion_dist_es_064dbe._.js.map  [root of the server]__0c82ca._.js  [root of the server]__0c82ca._.js.map  src_pages_2769a2._.css  (+44 more)
frontend/src/components/: Command.tsx  Graph.tsx  Left.tsx  Node.tsx  NodeSearch.tsx  NodeStack.tsx  Panel.tsx  Panel.tsx   Panels.tsx  Search.tsx  Sidebar.tsx  TabList.tsx  Tabs.tsx  Toast.tsx  Zettelkasten.tsx
frontend/src/lib/: Node.ts  NodeContext.tsx  Search.ts  TabContext.tsx  ThemeProvider.tsx  graphql.ts  katex.d.ts
frontend/src/pages/: Node.tsx  _app.tsx  _document.tsx  index.tsx
frontend/src/styles/: globals.css
src/: app.rs  cli.rs  db.rs  main.rs  node.rs  parser.rs  router.rs
(+50 files in other folders)
