[package]
name = "wyroam"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
regex = "1.10"
walkdir = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
orgize = "0.10.0-alpha.1"
tokio = { version = "1.41.0", features = ["full", "rt", "macros", "sync"] }
axum = "0.7.7"
tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}
tower = { version = "0.5.1", features = ["util"] }
tower-http = { version = "0.6.1", features = ["fs", "trace", "cors"] }
async-graphql = "7.0.11"
async-graphql-axum = "7.0.11"
http = "1.1.0"
rayon = "1.10.0"
tracing = "0.1.40"
notify = "7.0.0"
notify-debouncer-mini = "0.5.0"
tokio-stream = { version = "0.1.16", features = ["sync"] }
futures = "0.3.31"
chrono = "0.4.38"
lazy_static = "1.5.0"
